--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,10 @@ fabricApi {
 
 }
 
+loom {
+	accessWidenerPath = file("src/main/resources/enderlib.accesswidener")
+}
+
 dependencies {
 	// To change the versions see the gradle.properties file
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
