--- a/gradle.properties
+++ b/gradle.properties
@@ -10,9 +10,13 @@ loader_version=0.16.14
 loom_version=1.11-SNAPSHOT
 
 # Mod Properties
-mod_version=1.1.6
+mod_version=1.2.1
 maven_group=net.enderboy500.enderlib
 archives_base_name=enderlib
 
 # Dependencies
 fabric_version=0.128.1+1.21.5
+midnightlib_version=1.7.3+1.21.4-fabric
+
+# Compatibility
+modmenu_version=14.0.0-rc.2
