--- a/gradle.properties
+++ b/gradle.properties
@@ -6,17 +6,17 @@ org.gradle.parallel=true
 # check these on https://fabricmc.net/develop
 minecraft_version=1.21.5
 yarn_mappings=1.21.5+build.1
-loader_version=0.16.14
-loom_version=1.11-SNAPSHOT
+loader_version=0.17.0
+loom_version=1.13-SNAPSHOT
 
 # Mod Properties
-mod_version=1.2.8
+mod_version=1.2.9
 maven_group=net.enderboy500.enderlib
 archives_base_name=enderlib
 
 # Dependencies
 fabric_version=0.128.1+1.21.5
-midnightlib_version=1.7.3+1.21.4-fabric
+yacl_version=3.8.1+1.21.5-fabric
 
 # Compatibility
 modmenu_version=14.0.0-rc.2
