--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ loader_version=0.17.0
 loom_version=1.13-SNAPSHOT
 
 # Mod Properties
-mod_version=1.3.3.2
+mod_version=1.3.4-1.21.5
 maven_group=net.enderboy500.enderlib
 archives_base_name=enderlib
 
